--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
